tests/baselines/reference/structConstructorParameterProperties_basic.errors.txt
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts(8,10): error TS8010: Property 'x' is private and only accessible within struct 'C'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts(9,10): error TS8011: Property 'z' is protected and only accessible within struct 'C' and its substructs.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts(18,10): error TS8010: Property 'x' is private and only accessible within struct 'D<T>'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts(19,12): error TS2339: Property 'a' does not exist on type 'D<string>'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts(20,10): error TS8011: Property 'z' is protected and only accessible within struct 'D<T>' and its substructs.


==== tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties_basic.ts (5 errors) ====
    struct C {
        y: string;
        constructor(private x: string, protected z: string) { }
    }
    
    var c: C;
    var r = c.y;
    var r2 = c.x; // error, Property 'x' is private and only accessible within struct 'C'
             ~~~
!!! error TS8010: Property 'x' is private and only accessible within struct 'C'.
    var r3 = c.z; // error, Property 'z' is protected and only accessible within struct 'C' and its substructes
             ~~~
!!! error TS8011: Property 'z' is protected and only accessible within struct 'C' and its substructs.
    
    struct D<T> {
        y: T;
        constructor(a: T, private x: T, protected z: T) { }
    }
    
    var d: D<string>;
    var r = d.y;
    var r2 = d.x; // error
             ~~~
!!! error TS8010: Property 'x' is private and only accessible within struct 'D<T>'.
    var r3 = d.a; // error, Property 'a' does not exist on type 'D<string>'
               ~
!!! error TS2339: Property 'a' does not exist on type 'D<string>'.
    var r4 = d.z; // error
             ~~~
!!! error TS8011: Property 'z' is protected and only accessible within struct 'D<T>' and its substructs.
    